--- a/Myafim.Infrastructure/Myafim.Infrastructure.csproj
+++ b/Myafim.Infrastructure/Myafim.Infrastructure.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Myafim.Domain\Myafim.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
