feat: add firefly iii importer

--- a/Myafim.API/Myafim.API.csproj
+++ b/Myafim.API/Myafim.API.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Myafim.Infrastructure\Myafim.Infrastructure.csproj" />
+    <ProjectReference Include="..\Myafim.Domain\Myafim.Domain.csproj" />
   </ItemGroup>
 
 </Project>
