--- a/Myafim.Domain/Myafim.Domain.csproj
+++ b/Myafim.Domain/Myafim.Domain.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Pagination.EntityFrameworkCore.Extensions" Version="2.5.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Myafim.FireflyIii.Client\Myafim.FireflyIii.Client.csproj" />
+  </ItemGroup>
+
 </Project>
