--- a/Myafim.API/Myafim.API.csproj
+++ b/Myafim.API/Myafim.API.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
+    <PackageReference Include="Pagination.EntityFrameworkCore.Extensions" Version="2.5.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
